--- a/style.css
+++ b/style.css
@@ -154,8 +154,9 @@ div h1 {
 
 div h2 {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 500;
+    padding: 5px;
 }
 
 div h3 {
@@ -179,18 +180,13 @@ div h3 {
     padding: 20px;
 }
 
-.chart .gif {
+.chart img {
+    /*border: 2px solid red;*/
     width: 80vw;
-    height: 270px;
+    height: 280px;
     position: absolute;
     top: 50px;
     left: 25px;
-    margin: 0;
-}
-
-.chart img {
-    width: 80vw;
-    height: 270px;
     border-radius: 15px;
 }
 
