--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ li:hover {
     justify-content: space-evenly;
     align-items: center;
     cursor: default;
-    margin: 20px 0px;
+    margin: 15px 0px;
 }
 
 .data div {
@@ -169,7 +169,7 @@ div h3 {
     background-color: rgb(45, 45, 45);
     margin: auto;
     margin-bottom: 30px;
-    height: 50vh;
+    height: 350px;
     width: 90vw;
     border-radius: 15px;
     position: relative;
